tests/ui/fmt/ifmt-unimpl.stderr
error[E0277]: the trait bound `str: UpperHex` is not satisfied
  --> $DIR/ifmt-unimpl.rs:2:21
   |
LL |     format!("{:X}", "3");
   |              ----   ^^^ the trait `UpperHex` is not implemented for `str`, which is required by `&str: UpperHex`
   |              |
   |              required by a bound introduced by this call
   |
   = help: the following other types implement trait `UpperHex`:
             &T
             &mut T
             NonZero<T>
             Saturating<T>
             Wrapping<T>
             i128
             i16
             i32
           and 9 others
   = note: required for `&str` to implement `UpperHex`
note: required by a bound in `core::fmt::rt::Argument::<'_>::new_upper_hex`
  --> $SRC_DIR/core/src/fmt/rt.rs:LL:COL
   = note: this error originates in the macro `$crate::__export::format_args` which comes from the expansion of the macro `format` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
