tests/ui/fmt/ifmt-unimpl.rs
fn main() {
    format!("{:X}", "3");
    //~^ ERROR: `str: UpperHex` is not satisfied
}
